--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,5 +37,11 @@
   //  ],
   "exclude": [
     "node_modules"
+  ],
+  "include": [
+    "next-env.d.ts",
+    ".next/types/**/*.ts",
+    "**/*.ts",
+    "**/*.tsx"
   ]
 }
