--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@stripe/react-stripe-js": "^3.9.1",
+    "@stripe/stripe-js": "^7.8.0",
     "@supabase/supabase-js": "^2.55.0",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
@@ -36,6 +39,7 @@
     "react-icons": "^5.5.0",
     "react-share": "^5.2.2",
     "sonner": "^2.0.7",
+    "stripe": "^18.4.0",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.5",
     "zod": "^4.0.17"
